--- a/css/layout.css
+++ b/css/layout.css
@@ -1,22 +1,24 @@
 body{
     margin: 0;
     font-family: Andale Mono, monospace;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 
+html{
+    width: 100%;
+    height: 100%;
+}
 header, footer{
     height: 7.5%;
-
     background-color: white;
 }
 
 main{
     width: 100%;
-    height: 84.6%;
+    height: 184.6%;
     background-color: #d7d7d7;
 }
-
 
 
 
