--- a/css/id.css
+++ b/css/id.css
@@ -11,21 +11,56 @@
 }
 
 
-#container-main1{
+#container-main1, #container-main2{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     height: 98%;
     width: 50%;
-    background-color: red;
-}
-
-#container-main2{
-    height: 98%;
-    width: 50%;
-    background-color: blue;
 }
 
 
-img{
-    width: 100%;
+img:hover{
+    opacity: 0;
+}
+
+img:hover + .text{
+    visibility: visible;
+    font-size: 1.2vw;
+}
+
+
+.text{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+
+    font-weight: bold;
+    text-align: center;
+
+    visibility: hidden;
+    pointer-events: none;
+}
+
+
+.img-container {
+    position: relative;
+    display: inline;
+    width: 95%;
+    height: auto;
+    overflow: hidden;
+    padding: 10px 10px;
+
+}
+
+.img-container img {
+    max-width:100%;
+    max-height:100%;
     margin: 0;
-    padding: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* make the image cover the entire container */
 }
